--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,22 @@
     <title>Delightful Dog</title>
   </head>
   <body>
+    <form
+      name="contact"
+      method="post"
+      data-netlify="true"
+      netlify-honeypot="bot-field"
+      hidden
+    >
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <input type="text" name="address1" />
+      <input type="text" name="address2" />
+      <input type="text" name="city" />
+      <input type="text" name="state" />
+      <input type="text" name="zip" />
+      <textarea name="message"></textarea>
+    </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
