--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       <input type="text" name="address1" />
       <input type="text" name="address2" />
       <input type="text" name="city" />
-      <input type="text" name="state" />
+      <input type="text" name="st" />
       <input type="text" name="zip" />
       <textarea name="message"></textarea>
     </form>
