tried and failed to get a good-looking, functioning phone number input

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     >
       <input type="text" name="name" />
       <input type="email" name="email" />
+      <input type="tel" name="phone" />
       <input type="text" name="address1" />
       <input type="text" name="address2" />
       <input type="text" name="city" />
